로그인페이지 완성

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="./js/main.js"></script>
     <style>
         div {
-            font-size: 10px;
-            background : url(./images/aeyong.png);
-            width: 200px;
+            font-size: 50px;
+            /* background : url(./images/aeyong.png); */
+            /* width: 200px; */
         }
     </style>
   </head>
@@ -22,7 +22,13 @@
     <a href="/about">about</a>
     <div>hello</div>
     <div>hello</div>
-    <div>hello</div>
+    <div class="login">
+      <ui class="loginUi">
+        <li>
+          <a href="./singin/index.html">sign in</a>
+        </li>
+      </ui>
+    </div>
     <img src="./images/aeyong.png" alt="aeyong">
   </body>
 </html>
